# Learn_ESP32_IDF

BTVN1_Buoi1/: .gitignore
BTVN1_Buoi1/common/input_iot/: input_iot.c
BTVN1_Buoi1/main/: app_main.c
BTVN1_Buoi2/: CMakeLists.txt  README.md
BTVN1_Buoi2/common/input_iot/: input_iot.h
BTVN1_Buoi2/common/output_iot/: output_iot.c
BTVN1_Buoi2/main/: app_main.c
Bai_2_Free_RTOS/: CMakeLists.txt  README.md
Bai_2_Free_RTOS/common/output_iot/: output_iot.c  output_iot.h
Bai_2_Free_RTOS/main/: CMakeLists.txt  app_main.c
Bai_2_Tao_thu_vien/: CMakeLists.txt  README.md  sdkconfig
Bai_2_Tao_thu_vien/common/input_iot/: CMakeLists.txt
Bai_2_Tao_thu_vien/common/output_iot/: CMakeLists.txt
Bai_2_Tao_thu_vien/main/: CMakeLists.txt  app_main.c
Bai_3_HTTP_Request/: CMakeLists.txt  sdkconfig  sdkconfig.old
Bai_3_HTTP_Request/main/: app_main.c
Bai_4_Wifi_StationMode/: .gitignore  CMakeLists.txt
Bai_4_Wifi_StationMode/common/http_server_app/: http_server_app.c  http_server_app.h
Bai_4_Wifi_StationMode/html/: index.html
Bai_4_Wifi_StationMode/main/: CMakeLists.txt  app_main.c
Bai_5_Ledc/ledc_basic/: CMakeLists.txt
Bai_5_Ledc/ledc_fade/main/: ledc_fade_example_main.c
Bai_6_Smart_Config/: CMakeLists.txt  sdkconfig
Bai_7_MQTT_ssl_mutual_auth/: CMakeLists.txt  sdkconfig
Bai_7_MQTT_ssl_mutual_auth/html/: index.html
Bai_7_MQTT_ssl_mutual_auth/main/: CMakeLists.txt  app_config.c  app_config.h  app_main.c  app_mqtt.c  http_server_app.c  http_server_app.h
